# MDPN_TOSN

./: .gitignore  CMakeLists.txt  README.md  batch_doi.ps1  batch_doi.py  batch_dtr.ps1  batch_dtr.py  batch_regular.ps1  batch_regular.py  batch_regular_w0.ps1  batch_regular_w0.py  batch_regular_w1.ps1  batch_regular_w1.py  batch_regular_w2.ps1  batch_regular_w2.py  batch_regular_w3.ps1  batch_regular_w3.py  parse_output.py  regular.ps1
input/: large.cfg  test.cfg
output/: doi_s100_d1_r100_rd0.8_doi0.001_b1.5_a0.csv  doi_s100_d1_r100_rd0.8_doi0.001_b1.5_a1.csv  doi_s100_d1_r100_rd0.8_doi0.001_b10_a0.csv  doi_s100_d1_r100_rd0.8_doi0.001_b10_a1.csv  doi_s100_d1_r100_rd0.8_doi0.001_b10_a2.csv  doi_s100_d1_r100_rd0.8_doi0.001_b10_a3.csv  doi_s100_d1_r100_rd0.8_doi0.001_b2.5_a0.csv  doi_s100_d1_r100_rd0.8_doi0.001_b2.5_a1.csv  doi_s100_d1_r100_rd0.8_doi0.001_b2_a0.csv  doi_s100_d1_r100_rd0.8_doi0.001_b2_a1.csv  doi_s100_d1_r100_rd0.8_doi0.001_b5_a0.csv  doi_s100_d1_r100_rd0.8_doi0.001_b5_a1.csv  doi_s100_d1_r100_rd0.8_doi0.001_b5_a2.csv  doi_s100_d1_r100_rd0.8_doi0.001_b5_a3.csv  doi_s100_d1_r100_rd0.8_doi0.01_b1.5_a0.csv  doi_s100_d1_r100_rd0.8_doi0.01_b1.5_a1.csv  doi_s100_d1_r100_rd0.8_doi0.01_b10_a0.csv  doi_s100_d1_r100_rd0.8_doi0.01_b10_a1.csv  doi_s100_d1_r100_rd0.8_doi0.01_b10_a2.csv  doi_s100_d1_r100_rd0.8_doi0.01_b10_a3.csv  doi_s100_d1_r100_rd0.8_doi0.01_b2.5_a0.csv  doi_s100_d1_r100_rd0.8_doi0.01_b2.5_a1.csv  doi_s100_d1_r100_rd0.8_doi0.01_b2_a0.csv  doi_s100_d1_r100_rd0.8_doi0.01_b2_a1.csv  doi_s100_d1_r100_rd0.8_doi0.01_b5_a0.csv  (+4461 more)
plot/: merged_output.csv  (+313 more)
(+372 files in other folders)
